Program with translations

--- a/Qt/ui/conDialog.ui
+++ b/Qt/ui/conDialog.ui
@@ -30,19 +30,6 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="searchDeviceButton">
-       <property name="minimumSize">
-        <size>
-         <width>120</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Search devices</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <spacer name="horizontalSpacer_5">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -56,12 +43,35 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="searchDeviceButton">
+       <property name="minimumSize">
+        <size>
+         <width>120</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Search devices</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QComboBox" name="devicesList">
        <property name="minimumSize">
         <size>
          <width>200</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
        </property>
       </widget>
      </item>
@@ -103,6 +113,11 @@
          <height>0</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Connect</string>
        </property>
@@ -115,6 +130,11 @@
          <width>100</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
        </property>
        <property name="text">
         <string>Cancel</string>
