--- a/Qt/ui/gameStatistics.ui
+++ b/Qt/ui/gameStatistics.ui
@@ -124,12 +124,18 @@
          </widget>
         </item>
         <item row="6" column="1">
-         <widget class="QLineEdit" name="lineEdit_3">
+         <widget class="QLineEdit" name="ballVelLab">
           <property name="maximumSize">
            <size>
             <width>100</width>
             <height>16777215</height>
            </size>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -149,22 +155,34 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLineEdit" name="lineEdit">
+         <widget class="QLineEdit" name="gameTimeLable">
           <property name="maximumSize">
            <size>
             <width>100</width>
             <height>16777215</height>
            </size>
           </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QLineEdit" name="lineEdit_2">
+         <widget class="QLineEdit" name="bouncingLable">
           <property name="maximumSize">
            <size>
             <width>100</width>
             <height>16777215</height>
            </size>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -218,7 +236,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="backButton">
+       <widget class="QPushButton" name="returnButton">
         <property name="font">
          <font>
           <pointsize>14</pointsize>
